# iqbalcakep.com

./: .env  Cargo.toml  Procfile  README.md  app.json
src/: config.rs  error.rs  lib.rs  main.rs
src/handlers/: grabmeta.rs  index.rs  mod.rs
templates/: 404.html  base.html  css.html  index.html
views/: index.html
