[package]
name = "iqbalcakep"
version = "0.1.0"
authors = ["miqbalrr <iqb4lcakep@gmail.com>"]
edition = "2018"

[lib]
name = "iqbalcakep"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.7"
actix-web = "3"
listenfd = "0.3"
tera = "1.0"
dotenv = "0.15.0"
config = "0.10.1"

