[package]
name = "iqbalcakep"
version = "0.1.0"
authors = ["miqbalrr <iqb4lcakep@gmail.com>"]
edition = "2018"

[lib]
name = "iqbalcakep"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.3.1", features = ["full"] }
env_logger = "0.7"
actix-web = "3"
actix-files = "0.3"
actix-http = "2"
listenfd = "0.3"
askama = "0.10.3"
dotenv = "0.15.0"
config = "0.10.1"
grab-meta = "0.1.3"
serde_json = "1.0.58"
serde_derive = "1.0.116"
derive_more = "0.99.11"

[build-dependencies]
askama = "0.10"

